# piper_control_demo

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
assets/robots/: README.md
assets/robots/piper_description/launch/piper_with_gripper/: display_xacro.launch.py
assets/robots/piper_description/urdf/piper_description/configuration/: piper_description_physics.usd  piper_description_robot.usd
assets/robots/piper_description/urdf/piper_description_v100_camera/configuration/: piper_description_v100_camera_robot.usd
docs/: book.toml
docs/src/: README.md  SUMMARY.md
docs/src/next/: 2026_03_14.md
docs/src/plan/: gripper_enable_and_socket_7d_control.md  pybullet_socket_realtime_follow_test.md  socket_joint_stream_test.md
scripts/: README.md  move_debug.py  piper-generate-udev-rule  record_trajectories.py
src/piper_control_demo/: config.py
src/piper_control_demo/core/: path.py
src/piper_pybullet_sim/: joint_slider_control.py  slider_arm_gripper.py
tests/: disable_safe.py  move_debug.py  pybullet_socket_stream_sender.py  show_status.py  socket_joint_realtime_follow.py  socket_joint_stream_test.py
