[project]
name = "piper-control-demo"
version = "0.1.0"
description = "A demo project for piper-control"
requires-python = ">=3.10"
dependencies = [
    "pinocchio>=0.4.3",
    "piper-control[gravity]>=1.3.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
